--- a/proxy-server.yml
+++ b/proxy-server.yml
@@ -18,3 +18,6 @@ zuul:
     auth-service:
       path: /auth-service/**
       sensitiveHeaders:
+    sopridees-service:
+      path: /sopridees-service/**
+      sensitiveHeaders:
