[sopridees-service][user-service] ajout de l envoi de mail

--- a/proxy-server.yml
+++ b/proxy-server.yml
@@ -21,3 +21,7 @@ zuul:
     sopridees-service:
       path: /sopridees-service/**
       sensitiveHeaders:
+    user-service:
+      path: /user-service/**
+      sensitiveHeaders:
+
